--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -118,8 +118,8 @@
             android:layout_alignParentEnd="true"
             android:background="@null"
             style="@style/EditTextStyle"
-            android:hint="비밀 번호"
-            android:inputType="numberPassword"
+            android:hint="비밀번호"
+            android:inputType="textPassword"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
             android:singleLine="true"
