--- a/app/src/main/res/layout/activity_register_join.xml
+++ b/app/src/main/res/layout/activity_register_join.xml
@@ -51,6 +51,7 @@
             android:background="@null"
             android:textStyle="normal"
             android:textSize="16sp"
+            android:maxLength="9"
             android:textColor="@color/customBlack"
             android:textColorHint="#c8c8c8"
             android:letterSpacing="-0.01"
@@ -68,7 +69,8 @@
         android:fontFamily="@font/roboto_bold"
         android:stateListAnimator="@null"
         android:text="매장 합류하기"
-        android:textColor="@color/white"
+        android:enabled="false"
+        android:textColor="@color/disableTxtColor"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
