--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -45,6 +45,15 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <!--TimePicker Custom -->
+    <style name="TimePicker" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorControlNormal">@android:color/transparent</item>
+        <item name="android:textColorPrimary">@color/customBlack</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:selectionDividerHeight">29dp</item>
+        <item name="android:textSize">25sp</item>
+    </style>
+
     <style name="Theme.Albazip.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
