--- a/app/src/main/res/drawable/bg_selector_rest_long.xml
+++ b/app/src/main/res/drawable/bg_selector_rest_long.xml
@@ -2,5 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/rectangle_fill_yellow_radius_16"
         android:state_selected="true" />
-    <item android:drawable="@drawable/rectangle_fill_gray_radius_16" />
+    <item android:drawable="@drawable/rectangle_fill_gray_radius_16"
+        android:state_enabled="false"/>
+    <item android:drawable="@drawable/rectangle_fill_white_radius_gray_16"
+        android:state_enabled="true"/>
 </selector>
