--- a/app/src/main/res/drawable/bg_selector_rest_oval.xml
+++ b/app/src/main/res/drawable/bg_selector_rest_oval.xml
@@ -2,5 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/oval_fill_yellow"
         android:state_selected="true" />
-    <item android:drawable="@drawable/oval_fill_custom_white" />
+    <item android:drawable="@drawable/oval_fill_custom_white"
+        android:state_enabled="false"/>
+    <item android:drawable="@drawable/oval_fill_white_stroke_gray"
+        android:state_enabled="true"/>
 </selector>
