--- a/app/src/main/res/drawable/oval_fill_white_stroke_gray.xml
+++ b/app/src/main/res/drawable/oval_fill_white_stroke_gray.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#ededed">
+    android:color="@color/white">
 
     <item>
         <shape android:shape="oval">
+            <stroke android:color="#ededed"
+                android:width="1dp"/>
             <solid android:color="@color/white"/>
         </shape>
     </item>
