--- a/app/src/main/res/drawable/bg_selector_rest_oval.xml
+++ b/app/src/main/res/drawable/bg_selector_rest_oval.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/oval_fill_yellow"
-        android:state_selected="true" />
-    <item android:drawable="@drawable/oval_fill_custom_white"
-        android:state_enabled="false"/>
+
+    <item android:drawable="@drawable/oval_fill_yellow" android:state_selected="true" />
+
     <item android:drawable="@drawable/oval_fill_white_stroke_gray"
-        android:state_enabled="true"/>
+        android:state_enabled="false"/>
+
 </selector>
