--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,34 @@
     tools:context=".src.main.MainActivity">
 
     <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="0dp"
+        android:id="@+id/iv_logo_img"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="156dp"
-        android:src="@drawable/ic_logo"
+        android:src="@drawable/logo_image"
         android:foregroundGravity="center"
-        app:layout_constraintBottom_toTopOf="@id/tv_main"
+        app:layout_constraintBottom_toTopOf="@id/iv_logo_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
+    <ImageView
+        android:id="@+id/iv_logo_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo_text"
+        android:layout_marginTop="15dp"
+        android:foregroundGravity="center"
+        app:layout_constraintBottom_toTopOf="@id/tv_main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_logo_img"
+        app:layout_constraintVertical_chainStyle="packed" />
+
     <TextView
         android:id="@+id/tv_main"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
         android:fontFamily="@font/roboto_medium"
@@ -35,7 +48,7 @@
         app:layout_constraintBottom_toTopOf="@id/btn_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_logo" />
+        app:layout_constraintTop_toBottomOf="@id/iv_logo_txt" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_register"
