--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -104,5 +104,11 @@
         <item name="android:textColorHighlight">@color/mainYellow</item>
     </style>
 
+    <!-- tab 텍스트 굵기 -->
+    <style name="TabLayoutTextStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
 
