[FEAT] 마이페이지>근무자 / 내 정보, 작성글 탭 UI 배치 완료

--- a/app/src/main/res/layout/activity_manager_main.xml
+++ b/app/src/main/res/layout/activity_manager_main.xml
@@ -7,13 +7,13 @@
     tools:context=".src.main.ManagerMainActivity">
 
     <FrameLayout
-        android:id="@+id/worker_main_frm"
+        android:id="@+id/manager_main_frm"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="?attr/actionBarSize" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/worker_main_btm_nav"
+        android:id="@+id/manager_main_btm_nav"
         style="@style/BottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
