--- a/app/src/main/res/layout/child_fragment_no_worker_list.xml
+++ b/app/src/main/res/layout/child_fragment_no_worker_list.xml
@@ -65,6 +65,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_info_one" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_add_worker"
                 android:layout_width="96dp"
                 android:layout_height="36dp"
                 android:text="추가하기"
