--- a/app/src/main/res/drawable/bg_work_list_select.xml
+++ b/app/src/main/res/drawable/bg_work_list_select.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <stroke
+        android:color="#ffd85c"
+        android:width="2dp"/>
+
     <corners
         android:radius="20dp"/>
 
-    <stroke
-        android:width="2dp"
-        android:color="#ededed"/>
-
     <solid
-        android:color="#f8f8f8"/>
+        android:color="@color/subYellow"/>
 
 </shape>
