--- a/app/src/main/res/layout/child_fragment_worker_list.xml
+++ b/app/src/main/res/layout/child_fragment_worker_list.xml
@@ -1,92 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#f8f8f8">
 
-           <androidx.appcompat.widget.LinearLayoutCompat
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               app:layout_constraintStart_toStartOf="parent"
-               app:layout_constraintTop_toTopOf="parent"
-               app:layout_constraintEnd_toEndOf="parent"
-               android:orientation="vertical">
+    <TextView
+        android:id="@+id/tv_all"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="전체"
+        android:textStyle="normal"
+        android:textSize="14sp"
+        android:textColor="#6f6f6f"
+        android:letterSpacing="-0.03"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"/>
 
-               <androidx.constraintlayout.widget.ConstraintLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="322dp"
-                   android:layout_marginTop="24dp"
-                   android:layout_marginBottom="24dp"
-                   android:background="@drawable/retangle_fill_white_rounded_20"
-                   android:layout_marginHorizontal="24dp">
-
-                   <ImageView
-                       android:id="@+id/iv_no_worker"
-                       android:layout_width="68dp"
-                       android:layout_height="68dp"
-                       android:src="@drawable/img_no_worker"
-                       android:background="@null"
-                       android:layout_marginTop="46dp"
-                       app:layout_constraintStart_toStartOf="parent"
-                       app:layout_constraintTop_toTopOf="parent"
-                       app:layout_constraintEnd_toEndOf="parent"/>
-
-                   <TextView
-                       android:id="@+id/tv_info_one"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:text="등록된 근무자가 없어요!"
-                       android:textStyle="bold"
-                       android:textSize="22sp"
-                       android:textColor="#343434"
-                       android:letterSpacing="-0.01"
-                       android:lineSpacingExtra="-3sp"
-                       android:gravity="center_horizontal"
-                       android:layout_marginTop="24dp"
-                       app:layout_constraintTop_toBottomOf="@id/iv_no_worker"
-                       app:layout_constraintStart_toStartOf="parent"
-                       app:layout_constraintEnd_toEndOf="parent" />
-
-                   <TextView
-                       android:id="@+id/tv_info_two"
-                       android:layout_width="wrap_content"
-                       android:layout_height="0dp"
-                       android:gravity="center_horizontal"
-                       android:layout_marginTop="14dp"
-                       android:letterSpacing="-0.03"
-                       android:lineSpacingExtra="6sp"
-                       android:text="포지션을 추가하고, 근무자를 초대하면\n 근무자에 정보가 업데이트 돼요."
-                       android:textColor="#a3a3a3"
-                       android:textSize="13sp"
-                       android:textStyle="normal"
-                       app:layout_constraintEnd_toEndOf="@+id/tv_info_one"
-                       app:layout_constraintStart_toStartOf="@+id/tv_info_one"
-                       app:layout_constraintTop_toBottomOf="@id/tv_info_one" />
-
-                   <androidx.appcompat.widget.AppCompatButton
-                       android:layout_width="96dp"
-                       android:layout_height="36dp"
-                       android:text="추가하기"
-                       android:textStyle="bold"
-                       android:textColor="@color/customBlack"
-                       android:background="@drawable/rectangle_fill_yellow_radius_15"
-                       app:layout_constraintStart_toStartOf="@id/tv_info_two"
-                       app:layout_constraintEnd_toEndOf="@id/tv_info_two"
-                       app:layout_constraintTop_toBottomOf="@id/tv_info_two"
-                       app:layout_constraintBottom_toBottomOf="parent"
-                       android:layout_marginBottom="46dp"
-                       android:layout_marginTop="26dp" />
+    <TextView
+        android:id="@+id/tv_worker_cnt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/tv_all"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="4dp"
+        android:textStyle="normal"
+        android:textSize="14sp"
+        android:text="0"
+        android:textColor="#ff9d00"
+        android:letterSpacing="-0.03"/>
 
 
-
-               </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-           </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_worker_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginVertical="16dp"
+        android:layout_marginHorizontal="24dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_worker_cnt" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
