--- a/app/src/main/res/layout/child_fragment_worker_list.xml
+++ b/app/src/main/res/layout/child_fragment_worker_list.xml
@@ -41,7 +41,7 @@
         android:layout_height="0dp"
         android:layout_marginVertical="16dp"
         android:layout_marginHorizontal="24dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        tools:listitem="@layout/item_rv_worker_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
